--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,31 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
-        <title>To Do List</title>
+        <meta charset="utf-8">
+        <title>Restaurant</title>
+        <meta name="viewport" content="width=device-width,initial-scale=1">
+        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     </head>
     <body>
-        <ul class="todo-list-con">
-    
-        </ul>
+        <header>
+            <img src="img/restaurant-logo.png" class="logo" alt="logo">
+            <nav class="nav">
+                <p class="item">Home</p>
+                <p class="item">Instructions</p>
+                <p class="item">More Cuisines</p>
+            </nav>
+        </header>
+        <main>
+            <h1>Chez Programmeur Restaurant</h1>
+            <div class="line"></div>
+            <div id="items" class="row">
+            </div>
+            <div id="popup-comment" class="popup"></div>
+            <div id="popup-reservation" class="popup2"></div>
+        </main>
+        <footer>
+            <h4>Created by SJA, Hamid & Karel for Microverse Capstone Project under CC License.</h4>
+        </footer>
     </body>
     </html>
